VSE: Switching Waveforms On doesn't work anymore #91725

Closed
opened 2021-09-26 14:35:13 +02:00 by tintwotin · 8 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 462.59

Blender Version
Broken: version: 3.0.0 Alpha, branch: master (modified), commit date: 2021-09-24 11:38, hash: 2b9ca0f112
Worked: (newest version of Blender that worked as expected)
Caused by 7cb65e4581

Short description of error
Switching Waveforms On doesn't work anymore

Exact steps for others to reproduce the error

  • Add an audio strip.
  • In the overlay settings in the right hand side of the sequencer header, switch Waveform Display to Use Strip Option.
  • In the Strip panel switch off the waveform.
  • In the overlay settings in the right hand side of the sequencer header, switch Waveform Display to Waveform On.
    Notice that no waveforms are drawn on the strip.

In addition to this, the waveform doesn't get centered and use full height, when there are no texts displayed.

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 462.59 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master (modified), commit date: 2021-09-24 11:38, hash: `2b9ca0f112` Worked: (newest version of Blender that worked as expected) Caused by 7cb65e4581 **Short description of error** Switching Waveforms On doesn't work anymore **Exact steps for others to reproduce the error** - Add an audio strip. - In the overlay settings in the right hand side of the sequencer header, switch Waveform Display to Use Strip Option. - In the Strip panel switch off the waveform. - In the overlay settings in the right hand side of the sequencer header, switch Waveform Display to Waveform On. Notice that no waveforms are drawn on the strip. In addition to this, the waveform doesn't get centered and use full height, when there are no texts displayed.
Author

Added subscriber: @tintwotin

Added subscriber: @tintwotin

Added subscriber: @slinkeepie

Added subscriber: @slinkeepie
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Added subscriber: @iss

Added subscriber: @iss
Member

Caused by 7cb65e4581

cc @iss

Caused by 7cb65e4581 cc @iss

This issue was referenced by c38d2513c5

This issue was referenced by c38d2513c5db343314cf32f2ca2dc3396877df09

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2021-10-04 22:18:58 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91725
No description provided.